--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>SashaTalk</title>
-        <link rel="stylesheet" href="style.css">
-        <meta name="viewport" content="width=device-width" initial-scale="1.0">
-    </head>
-    <body>
-        <img src="avatar.jpg" class="avatar">
-        <p>SashaTalk</p>
-        <a href="https://vk.com/sashatalk" target="_blank">
-            <img src="VK.png" width=48 alt="VK">
-        </a>
-        <a href="https://github.com/SashaTalk" target="_blank">
-            <img src="GitHub.png" width=48 alt="GitHub">
-        </a>
-        <a href="https://t.me/sashatalk" target="_blank">
-            <img src="Telegram.png" width=48 alt="Telegram">
-        </a>
-    </body>
+<html lang="ru">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SashaTalk</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <img src="avatar.jpg" class="avatar" alt="Аватар SashaTalk">
+    <p>SashaTalk</p>
+    <a href="https://vk.com/sashatalk" target="_blank" rel="noopener noreferrer">
+        <img src="VK.png" width="48" alt="VK">
+    </a>
+    <a href="https://github.com/SashaTalk" target="_blank" rel="noopener noreferrer">
+        <img src="GitHub.png" width="48" alt="GitHub">
+    </a>
+    <a href="https://t.me/sashatalk" target="_blank" rel="noopener noreferrer">
+        <img src="Telegram.png" width="48" alt="Telegram">
+    </a>
+</body>
+
 </html>
