svg icons + adding class

--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SashaTalk</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 
 <body>
-    <img src="avatar.jpg" class="avatar" alt="Аватар SashaTalk">
+    <img src="./assets/imgs/avatar.jpg" class="avatar" alt="Аватар SashaTalk">
     <p>SashaTalk</p>
-    <a href="https://vk.com/sashatalk" target="_blank" rel="noopener noreferrer">
-        <img src="VK.png" width="48" alt="VK">
-    </a>
-    <a href="https://github.com/SashaTalk" target="_blank" rel="noopener noreferrer">
-        <img src="GitHub.png" width="48" alt="GitHub">
-    </a>
-    <a href="https://t.me/sashatalk" target="_blank" rel="noopener noreferrer">
-        <img src="Telegram.png" width="48" alt="Telegram">
-    </a>
+    <div class="social-links">
+        <a href="https://vk.com/sashatalk" target="_blank" rel="noopener noreferrer">
+            <img src="./assets/imgs/vk.svg" width="48" alt="VK">
+        </a>
+        <a href="https://github.com/SashaTalk" target="_blank" rel="noopener noreferrer">
+            <img src="./assets/imgs/github.svg" width="48" alt="GitHub">
+        </a>
+        <a href="https://t.me/sashatalk" target="_blank" rel="noopener noreferrer">
+            <img src="./assets/imgs/telegram.svg" width="48" alt="Telegram">
+        </a>
+    </div>
 </body>
 
 </html>
